# ChangeLog for dev-libs/libisoburn
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libisoburn/ChangeLog,v 1.20 2009/07/04 12:32:49 billie Exp $

*libisoburn-0.4.0 (04 Jul 2009)

  04 Jul 2009; Pielmeier Daniel <billie@gentoo.org>
  -libisoburn-0.2.6_p0.ebuild, -libisoburn-0.3.2_p0.ebuild,
  -libisoburn-0.3.4_p0.ebuild, -libisoburn-0.3.6_p0.ebuild,
  +libisoburn-0.4.0.ebuild:
  Version bump. Add some overdue use flags. Remove old.

*libisoburn-0.3.8 (27 Apr 2009)

  27 Apr 2009; Peter Alfredsen <loki_val@gentoo.org>
  +libisoburn-0.3.8.ebuild:
  Bump. Thanks to Daniel Pielmeier for reminding me. Import some
  plnn-handling bits from libburn to get rid of the ugly _pn versions.

  19 Mar 2009; Brent Baude <ranger@gentoo.org> libisoburn-0.3.0_p0.ebuild:
  Marking libisoburn-0.3.0_p0 ~ppc for bug 254947

*libisoburn-0.3.6_p0 (17 Mar 2009)

  17 Mar 2009; Peter Alfredsen <loki_val@gentoo.org>
  +libisoburn-0.3.6_p0.ebuild:
  Bump

*libisoburn-0.3.4_p0 (01 Mar 2009)

  01 Mar 2009; Peter Alfredsen <loki_val@gentoo.org>
  +libisoburn-0.3.4_p0.ebuild:
  Bump. Thanks to Daniel Pielmeier (billie)
  <daniel.pielmeier@googlemail.com> for judicious use of prodding to unslack
  me.

*libisoburn-0.3.2_p0 (01 Feb 2009)

  01 Feb 2009; Peter Alfredsen <loki_val@gentoo.org>
  +libisoburn-0.3.2_p0.ebuild:
  Bump, bug 254991. EAPI-2. Thanks to Daniel Pielmeier (billie)
  <daniel.pielmeier@googlemail.com>.

  26 Jan 2009; Brent Baude <ranger@gentoo.org> libisoburn-0.3.0_p0.ebuild:
  Marking libisoburn-0.3.0_p0 ppc64 for bug 254947

  23 Jan 2009; Markus Meier <maekke@gentoo.org> libisoburn-0.3.0_p0.ebuild:
  amd64/x86 stable, bug #254947

*libisoburn-0.3.0_p0 (02 Dec 2008)

  02 Dec 2008; <ssuominen@gentoo.org> +libisoburn-0.3.0_p0.ebuild:
  Version bump.

  01 Dec 2008; Brent Baude <ranger@gentoo.org> libisoburn-0.2.8_p0.ebuild:
  Marking libisoburn-0.2.8_p0 ~ppc64 for bug 245272
