@@ -1,6 +1,8 @@
 DIST libisoburn-0.3.0.pl00.tar.gz 621777 RMD160 21b90ba1d23aee6a91777be88e828ce7a3266ad9 SHA1 ed209467876fd8e34b32c4390e2e525e5e948b12 SHA256 90750aa61ce185eb84d3566255b4a479208139242237136a696388fac89413cf
 DIST libisoburn-0.4.0.pl00.tar.gz 697712 RMD160 a51309c53b72723e74aa1c9c996aca71fc5b71b2 SHA1 5c6adef06271003e384e08a24c4dda9e750b23ed SHA256 2e48e6ed8fcf7ee17d33993bcfa4809684970d3f6c065013ccb8c300e48dd741
+DIST libisoburn-0.4.0.pl01.tar.gz 700036 RMD160 9189090508e698770c2eadb65df4e3bb2f365280 SHA1 e795a9b2bec9d08efa36c83e3422f8c8312fb0e2 SHA256 5877747f701c4fa60d4eba14cb460fb2d21e9ecba058700c1d4e0d19bf75fcf1
 EBUILD libisoburn-0.3.0_p0.ebuild 768 RMD160 43e381b6ded38c80619a92a6d455aaf862bb26c2 SHA1 790421a2119d121e0c60d441e03f919bbca61a33 SHA256 bd86af8137aaaa584c8f20bf55146991570fb085c5e12e095c6629acaa97ca6a
 EBUILD libisoburn-0.4.0.ebuild 1206 RMD160 97e65d37fa7064c92bfb5b76f35d86d7274d1b16 SHA1 47d953f48896ab4f6dd447830f9823f49c66e24d SHA256 15c0baa0e9971935cff196e3e5b226ae7afc3efbeb13aff3a01bcde53f2e356b
-MISC ChangeLog 3361 RMD160 18e88fa01d03f08d75194e305aa03e83ac80dd59 SHA1 b01f80f21a44e099b8975ad341ebedf5b8ef0439 SHA256 a77016f291f5b178a9464380ba15fc5a5010f1d00cee1ed7988d9b47dcf41c34
+EBUILD libisoburn-0.4.0_p01.ebuild 1210 RMD160 f7fe6e77c116e55a88dc869396a0d8057a2d8233 SHA1 d09e534710a8b2aa601ea729c480435c58808b18 SHA256 8a9cc996d3655d27f13710247af4532b8acd6e6f3e556107f23fe21ff48b59e3
+MISC ChangeLog 3499 RMD160 42c39453694dd6be67240dee9d5d5c0876a8805e SHA1 4d53c3240d3fcdacbc994b3be67a04ea2e4324c9 SHA256 ae535a7f6c04df57b29ab20ffe2f97b7ffe601a0a953a37f1151e26af8fba785
 MISC metadata.xml 166 RMD160 02ca0a5d9279c1b52c3887f5a1f52f3feb002af9 SHA1 b9fccc7c24aa717c30efef068fd544a692f264f6 SHA256 ce62d1e5b04e01d03a732ee6d33b3d500810de8e55af4a527c970e5b475735d8
