@@ -1,6 +1,12 @@
 # ChangeLog for dev-libs/libisoburn
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libisoburn/ChangeLog,v 1.20 2009/07/04 12:32:49 billie Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libisoburn/ChangeLog,v 1.21 2009/07/20 16:35:55 billie Exp $
+
+*libisoburn-0.4.0_p01 (20 Jul 2009)
+
+  20 Jul 2009; Pielmeier Daniel <billie@gentoo.org>
+  +libisoburn-0.4.0_p01.ebuild:
+  Version bump.
 
 *libisoburn-0.4.0 (04 Jul 2009)
 
